# flwrs

app/: Cargo.toml
app/resources/migrations/sqlite/main/: 1.0.0-1.up.sql
app/src/: db.rs  http.rs  main.rs  modules.rs  registry.rs
app/src/modules/: scene.rs
app/src/modules/director/: service.rs
app/src/modules/scene/: api.rs  service.rs
app/src/modules/scene/service/: query_sqlite.rs
core/: Cargo.toml
core/resources/migrations/sqlite/: migrator.sql
core/src/: args.rs  config.rs  db.rs  http.rs  lib.rs  logging.rs  registry.rs
core/src/config/: toml_source.rs
core/src/db/: migrations.rs  sqlite.rs
core/src/logging/: loglog.rs
plugin/: Cargo.toml  build.rs
plugin/schema/: common.proto  schema.proto  sink.proto  source.proto  transform.proto
plugin/src/: lib.rs
plugin/src/plugin/: core.rs  error.rs  logger.rs  mod.rs  msg_client.rs
plugin/src/schema/: mod.rs
plugin/src/sink/: mod.rs  plugin.rs  runner.rs
plugin/src/source/: local_sink.rs  mod.rs  plugin.rs  runner.rs
plugin/src/transform/: local_sink.rs  mod.rs  plugin.rs  runner.rs
plugins/http_sink/: Cargo.toml
plugins/http_sink/src/: main.rs  plugin.rs  schema.rs
