[package]
name = "flwrs-http-sink"
version = "0.0.1"
edition = "2024"

[dependencies]
flwrs-plugin = { path = "../../plugin" }
tokio = { version = "1.46.1", features = ["full", "rt-multi-thread"] }
clap = { version = "4.5.41", features = ["derive"] }
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
reqwest = "0.12.22"
bytes = "1.10.1"
